@@ -796,5 +796,10 @@
                 </ol></p>
             </statement>
         </exercise>
+        <exercise number="T50" xml:id="exercise-MINM-T50">
+            <statement>
+                <p>This exercise asks you to construct a new proof of a result similar to <xref ref="theorem-NPNF"/> by adding extra assumptions and using less powerful results than we did in this section.  Add the hypothesis that <m>A</m> and <m>B</m> are both upper triangular matrices.  Establish the same equivalence as in <xref ref="theorem-NPNF"/>, but make use of <xref ref="theorem-NTM"/>, <xref ref="theorem-PTMT"/>, and <xref ref="exercise-MM-T28"/>.  In particular, you should not need any results that occur <em>after</em> <xref ref="section-MM"/>.</p>
+            </statement>
+        </exercise>
     </exercises>
 </section>
