@@ -38,7 +38,7 @@ to illustrate.  Move Theorem PTMT about the product of
 triangular matrices moves from Section OD to Section MM.
 Move Theorem ITMT about inverses of triangular matrices
 from Section OD to Section MINM, and improve the proof.
-New exercises: MO.T10, MO.T25, MM.T28
+New exercises: MO.T10, MO.T25, MM.T28, MINM.T50
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -56,6 +56,7 @@ New: Example NSTM, nonsingular triangular matrices
 New: Exercise MO.T10, both upper and lower triangular
 New: Exercise MO.T25, transpose of triangular matrix
 New: Exercise MM.T28, diagonal of triangular matrix product
+New: Exercise MINM.T50, modified proof of Theorem NPNF
 New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
